<resources>
    <string name="app_name">SrijanTask</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Welcome">Welcome \n Srijan Task</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="Version">Version (1.0.0)</string>
    <string name="validusername">Enter proper user name</string>
    <string name="validpassword">Password not meeting the criteria</string>
    <string name="LoginSuccessfully">Login Successfully !!</string>
    <string name="Hello">Hello</string>

</resources>